rust/parser-tailwind/src/snapshots/parser_tailwind__tests__transpile_css-2.snap
---
source: rust/parser-tailwind/src/lib.rs
assertion_line: 197
expression: "transpile_css(r#\"\n            @media (min-width: 640px) {\n                :root {\n                    font-size: 1rem;\n                    line-height: 1.5rem;\n                }\n            }\n            \"#)?"
---
@media (min-width: 640px) {
  :root {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}
