rust/parser-tailwind/src/snapshots/parser_tailwind__tests__transpile_css.snap
---
source: rust/parser-tailwind/src/lib.rs
assertion_line: 182
expression: "transpile_css(r#\"\n            .foo {\n                color: pink;\n                & .bar {\n                    color: red;\n                    & .baz .quax {\n                        color: orange;\n                    }\n                }\n            }\n            \"#)?"
---
.foo {
  color: pink;
}

.foo .bar {
  color: red;
}

.foo .bar .baz .quax {
  color: orange;
}
