rust/parser-tailwind/src/snapshots/parser_tailwind__tests__transpile_tailwind-2.snap
---
source: rust/parser-tailwind/src/lib.rs
assertion_line: 218
expression: "transpile_tailwind(r\"rounded(lg\")?"
---
:root {
  border-radius: .25rem;
}
