rust/parser-tailwind/src/snapshots/parser_tailwind__tests__transpile_tailwind-3.snap
---
source: rust/parser-tailwind/src/lib.rs
assertion_line: 220
expression: "transpile_tailwind(r\"border(2 x-4 t-8 b-0)\")?"
---
:root {
  border-width: 2px;
}
