rust/parser-tailwind/src/snapshots/parser_tailwind__tests__transpile_tailwind-4.snap
---
source: rust/parser-tailwind/src/lib.rs
assertion_line: 222
expression: "transpile_tailwind(r\"border(rose-400)\")?"
---
:root {
  border-color: #fb7185;
}
