rust/parser-tailwind/src/snapshots/parser_tailwind__tests__transpile_tailwind-5.snap
---
source: rust/parser-tailwind/src/lib.rs
assertion_line: 224
expression: "transpile_tailwind(r\"border(dashed)\")?"
---
:root {
  border-style: dashed;
}
