rust/parser-tailwind/src/snapshots/parser_tailwind__tests__transpile_tailwind.snap
---
source: rust/parser-tailwind/src/lib.rs
assertion_line: 214
expression: "transpile_tailwind(r\"text-md text-red-200 bg-red-100\")?"
---
:root {
  color: #fecaca;
  background-color: #fee2e2;
  font-size: 1rem;
  line-height: 1.5rem;
}
