rust/parser-tailwind/src/snapshots/parser_tailwind__tests__transpile_tailwind_variants-2.snap
---
source: rust/parser-tailwind/src/lib.rs
assertion_line: 242
expression: "transpile_tailwind(r\"sm:text-md md:text(lg) lg:(text(xl)) xl:(text-5xl)\")?"
---
:root {
  font-size: 3rem;
  line-height: 100%;
}
